# skill-cli

./: README.md  install.ps1  install.sh  pyproject.toml
skill_cli/: cli.py
